<resources>
    <string name="app_name">My Testing Lab App</string>
    <string name="empty">This container is empty</string>
    <string name="label_data_id">Label Data Id</string>
    <string name="label_data_description">Data Description</string>
    <string name="button_restore_state">State Restore With Fragments</string>
    <string name="label_insert_image_url">Insert valid image url</string>
    <string name="button_picasso_test">Picasso Image Loader Test</string>
    <string name="button_mchart_test">MPAndroidChart Test</string>
    <string name="button_open_child">Open Child</string>
    <string name="button_zoom_photoview">Zoom with Photo View</string>
    <string name="button_open_reorder_to_front">With Reorder To Front</string>
    <string name="button_close_result">Close With Result</string>
    <string name="button_open_activities">Opening Activities</string>
    <string name="button_open_initial">Open A</string>
    <string name="button_open_second">Open B</string>
    <string name="button_open_third">Open C</string>
    <string name="button_open_fourth">Open D</string>
    <string name="hash_code">Object HashCode %d</string>
    <string name="checkbox_reorder_to_front">FLAG_ACTIVITY_REORDER_TO_FRONT</string>
    <string name="checkbox_clear_top">FLAG_CLEAR_ON_TOP</string>
    <string name="button_open_fifth">Open E - SingleTask</string>
    <string name="button_open_single">Open Single</string>
    <string name="button_currencies">Currency</string>
    <string name="label_current_primary_locale">Primary locale %s</string>
    <string name="label_current_primary_currency">Primary currency code %s</string>
    <string name="label_current_primary_currency_symbol">Primary currency symbol %s</string>
    <string name="label_formatted_number">Formatted number %s without decimals \nFormatted number %s with decimals \nFormatted number %s with decimals</string>
    <string name="button_rounded_images">Rounded Image</string>
    <string name="button_camera">Touch focus</string>
    <string name="button_notification">Notification</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>
    <string name="button_locations">Locations</string>
</resources>
