<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".doubleinstance.InitialActivity">

        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp" />

        <TextView
            android:id="@+id/text_view_hashcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp" />

        <CheckBox
            android:id="@+id/checkbox_reorder_to_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_reorder_to_front" />

        <Button
            android:id="@+id/button_open_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open_initial" />

        <Button
            android:id="@+id/button_open_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open_second" />

        <Button
            android:id="@+id/button_open_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open_third" />

        <Button
            android:id="@+id/button_open_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open_fourth" />

        <TextView
            android:id="@+id/text_view_stack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp" />

    </LinearLayout>
</ScrollView>